add somthing subject

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/download (4).jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Resume</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora:400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:900' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400italic' rel='stylesheet' type='text/css'>
+    <title>Safiurahma Jami | Select Work</title>
     <!-- Google tag (gtag.js) --> 
      <script async src="https://www.googletagmanager.com/gtag/js?id=G-NGV6GS0WMD"></script> <script> 
      window.dataLayer = window.dataLayer || []; 
@@ -12,6 +17,37 @@
      gtag('js', new Date()); 
      gtag('config', 'G-NGV6GS0WMD'); 
      </script>
+     <style type="text/css">
+
+.nf-r2 {
+  font-family: Lora, serif;
+  font-size: 2em;
+  line-height: 1em;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.eb-lora {
+  color: white;
+  font-family: Lora, sans-serif;
+  font-style: italic;
+}
+
+
+.sos-prep {
+  font-family: Playfair Display;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 5em;
+  color: white;
+  margin-left: 30px;
+  margin-top: 10px;
+  /* vertical-align: middle;
+  margin-top: -0.4em;
+  display: inline-block; */
+}
+
+</style>
   </head>
   <body>
     <div id="root"></div>
